--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -202,21 +202,21 @@ jobs:
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish prep
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          find ~/ -name "*.whl"
-          find /home/runner/work/ANTsPy/ -name "*.whl"
-          mv /home/runner/work/ANTsPy/ANTsPy/wheelhouse/cp*/antspyx*.whl /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
-          rm -r -f /home/runner/work/ANTsPy/ANTsPy/wheelhouse/cp*
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         if: ${{ github.event_name == 'push' }}
+        run: |
+          uname
+          mywhl=`find ~/ -name "antspyx*.whl"
+          extrawheeldir=`dirname $mywhl`
+          wheeldir=`dirname $extrawheeldir`
+          mv $mywhl $wheeldir
+          rm -r -f $extrawheeldir
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
+          packages_dir: $wheeldir
           verify_metadata: false
           skip_existing: true
           verbose: true
