--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -202,21 +202,26 @@ jobs:
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
 
-
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      - name: Publish prep
         if: ${{ github.event_name == 'push' }}
         run: |
           uname
           mywhl=`find ~/ -name "antspyx*.whl"
           extrawheeldir=`dirname $mywhl`
           wheeldir=`dirname $extrawheeldir`
+          wheeldir=`dirname $wheeldir`
+          wheeldir=${wheeldir}/dist
+          mkdir -p $wheeldir
+          echo $wheeldir
           mv $mywhl $wheeldir
           rm -r -f $extrawheeldir
+
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        if: ${{ github.event_name == 'push' }}
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: $wheeldir
           verify_metadata: false
           skip_existing: true
           verbose: true
