WIP: might work for osx as well .... try using default location - fix typo

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -206,7 +206,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         run: |
           uname
-          mywhl=`find ~/ -name "antspyx*.whl"
+          mywhl=`find ~/ -name "antspyx*.whl"`
           extrawheeldir=`dirname $mywhl`
           wheeldirx=`dirname $extrawheeldir`
           wheeldir=`dirname $wheeldirx`
