PERF: automate upload of linux wheels to pypi
at the end of many experiments, only the linux builds will work.   though the system works
ok and could work for other builds in the future.  at the moment, then, will still have to
manually upload to pypi for OS other than linux.

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -205,16 +205,17 @@ jobs:
       - name: Publish prep
         if: ${{ github.event_name == 'push' }}
         run: |
-          uname
-          mywhl=`find ~/ -name "antspyx*.whl"`
-          extrawheeldir=`dirname $mywhl`
-          wheeldirx=`dirname $extrawheeldir`
-          wheeldir=`dirname $wheeldirx`
-          wheeldir=${wheeldir}/dist
-          mkdir -p $wheeldir
-          echo $wheeldir
-          mv $mywhl $wheeldir
-          rm -r -f $extrawheeldir $wheeldirx
+          if [[ uname -eq "Linux" ]]; then
+            mywhl=`find ~/ -name "antspyx*.whl"`
+            extrawheeldir=`dirname $mywhl`
+            wheeldirx=`dirname $extrawheeldir`
+            wheeldir=`dirname $wheeldirx`
+            wheeldir=${wheeldir}/dist
+            mkdir -p $wheeldir
+            echo $wheeldir
+            mv $mywhl $wheeldir
+            rm -r -f $extrawheeldir $wheeldirx
+          fi
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
