--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,6 +12,24 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  make_sdist:
+    name: Make SDist
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Optional, use if you use setuptools_scm
+          submodules: true # Optional, use if you have submodules
+  
+      - name: Build SDist
+        run: pipx run build --sdist
+  
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*.tar.gz
+          skip_existing: true
+
   build_wheels:
     name: Build wheel for cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
     runs-on: ${{ matrix.os }}
@@ -202,27 +220,13 @@ jobs:
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish prep
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          if [ `uname` == "Linux" ]; then
-            mywhl=`find ~/ -name "antspyx*.whl"`
-            extrawheeldir=`dirname $mywhl`
-            wheeldirx=`dirname $extrawheeldir`
-            wheeldir=`dirname $wheeldirx`
-            wheeldir=${wheeldir}/dist
-            mkdir -p $wheeldir
-            echo $wheeldir
-            mv $mywhl $wheeldir
-            rm -r -f $extrawheeldir $wheeldirx
-          fi
+          if: ${{ (needs.rules.outputs.branch_name != 'production') && (needs.rules.outputs.branch_name != 'staging') }}
 
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        if: ${{ github.event_name == 'push' }}
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          verify_metadata: false
-          skip_existing: true
-          verbose: true
+      - name: Publish to pypi for osx and linux
+        if: ${{ (github.event_name == 'push') && (runner.os != 'Windows') }}
+        run: |
+          mywhl=`find ~/ -name "antspyx*.whl"`
+          twine upload --skip-existing $mywhl
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
