--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -159,14 +159,14 @@ jobs:
 
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y gcc-c++ libpng-devel libpng
-            python -m pip install cmake ninja
+            python -m pip install cmake ninja setuptools
 
           CIBW_BEFORE_ALL_WINDOWS: |
-            python -m pip install cmake ninja
+            python -m pip install cmake ninja setuptools
 
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_MACOS: |
-            python -m pip install cmake ninja
+            python -m pip install cmake ninja setuptools
 
           CIBW_ENVIRONMENT_MACOS: |
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
