--- a/.github/workflows/wheels-macosx_arm64.yml
+++ b/.github/workflows/wheels-macosx_arm64.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
     - master
-    - refactor_ci_pypi
   pull_request:
     branches:
     - master
@@ -127,6 +126,7 @@ jobs:
 
   pypi-publish:
     name: Upload release to PyPI
+    if: github.event_name == 'release'
     needs: [build_wheels]
     runs-on: ubuntu-latest
     permissions:
@@ -134,7 +134,6 @@ jobs:
     steps:
     # retrieve your distributions here
     - name: Download artifacts
-      # needs: [build_wheels, build_sdist]
       uses: actions/download-artifact@v4
       with:
         # unpacks all CIBW artifacts into dist/
@@ -144,7 +143,6 @@ jobs:
 
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      # if: ${{ (github.event_name == 'push') && (runner.os == 'Linux') }}
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
