--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -8,6 +8,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v5
 
+      - name: Install package
+        run: python -m pip install .
+
       - name: Unit tests
         run: tests/run_tests.sh --coverage
 
