--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -12,10 +12,7 @@ jobs:
         run: python -m pip install .
 
       - name: Unit tests
-        run: tests/run_tests.sh --coverage
-
-      - name: Coverage
-        run: coveralls --service=github
+        run: tests/run_tests.sh
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
