ENH: allow workflow dispatch

--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -3,6 +3,12 @@ on:
     branches:
       - master
 
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch name'
+        required: true
+
 name: codecov
 
 jobs:
