--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -167,6 +167,8 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
+            brew update
+            brew install libpng
 
           CIBW_ENVIRONMENT_MACOS: |
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
