--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -170,9 +170,8 @@ jobs:
             brew update
             brew install libpng
 
-          CIBW_ENVIRONMENT_MACOS: >
-            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
-	    CMAKE_PREFIX_PATH=/usr/local
+          CIBW_ENVIRONMENT_MACOS: |
+            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
 
         run: python -m cibuildwheel --output-dir wheelhouse/cp${{ matrix.cibw_python }}-${{matrix.platform_id }}
 
