--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -153,7 +153,9 @@ jobs:
           CIBW_PRERELEASE_PYTHONS: True
 
           CIBW_BEFORE_ALL_LINUX: |
+            echo "Installing system dependencies with yum"
             yum install -y gcc-c++ libpng-devel libpng
+            echo "pip installing cmake and ninja"
             python -m pip install cmake ninja setuptools
 
           CIBW_BEFORE_ALL_WINDOWS: |
@@ -162,7 +164,9 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
+            echo "Running brew update"
             brew update
+            echo "Installing libpng"
             brew install libpng
 
           CIBW_ENVIRONMENT_MACOS: |
