--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -164,10 +164,8 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
-            echo "Running brew update"
-            brew update -v
-            echo "Installing libpng"
-            brew install libpng
+            brew update
+            HOMEBREW_NO_AUTO_UPDATE=1 brew install libpng
 
           CIBW_ENVIRONMENT_MACOS: |
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
