--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -153,7 +153,9 @@ jobs:
           CIBW_PRERELEASE_PYTHONS: True
 
           CIBW_BEFORE_ALL_LINUX: |
+            echo "Installing system dependencies with yum"
             yum install -y gcc-c++ libpng-devel libpng
+            echo "pip installing cmake and ninja"
             python -m pip install cmake ninja setuptools
 
           CIBW_BEFORE_ALL_WINDOWS: |
@@ -163,7 +165,9 @@ jobs:
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
             brew update
-            brew install libpng
+            if ! brew list libpng &>/dev/null; then
+                HOMEBREW_NO_AUTO_UPDATE=1 brew install libpng
+            fi
 
           CIBW_ENVIRONMENT_MACOS: |
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
