--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -68,6 +68,8 @@ jobs:
 
     - name: Replace installed ANTsPy with PR code
       run: |
+        source $CONDA/etc/profile.d/conda.sh
+        conda activate antspy-env
         ANTS_SITE_PACKAGES=$(python -c "import os, ants; print(os.path.dirname(ants.__file__))")
         rm -rf $ANTS_SITE_PACKAGES/ants
         cp -r antspy-pr/ants $ANTS_SITE_PACKAGES/ants
