--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -1,10 +1,11 @@
 name: ci-docker
 on:
-  push:
-    branches:
-      - 'master'
+  schedule:
+    - cron: "30 6 * * *"
+  push:  
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
 
 jobs:
   docker:
