--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -35,12 +35,22 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
       -
+        name: Set Docker Image Tag
+        id: set_tag
+        run: |
+          if [[ "${{ github.event_name }}" == "schedule" ]]; then
+            echo "IMAGE_TAG=nightly" >> $GITHUB_ENV
+          else
+            TAG=${{ steps.meta.outputs.tags }}
+            echo "IMAGE_TAG=${TAG}" >> $GITHUB_ENV
+          fi
+      - 
         name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64
           push: ${{ github.repository == 'ANTsX/ANTsPy' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.IMAGE_TAG }}
           labels: ${{ steps.meta.outputs.labels }}
 
