--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -18,7 +18,12 @@ env:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    # Default shell needs to be bash for conda
+    # https://github.com/conda-incubator/setup-miniconda?tab=readme-ov-file#important
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v5
