--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(Python 3.8
 # Import nanobind through CMake's find_package mechanism
 find_package(nanobind CONFIG REQUIRED)
 
+get_test_property(${PROJECT_NAME} WORKING_DIRECTORY test_dir)
+message("My test's working directory: ${test_dir}")
+
 execute_process(COMMAND sh scripts/configure_ITK.sh)
 execute_process(COMMAND sh scripts/configure_ANTs.sh)
 
